<resources>
    <string name="app_name">Matchatak</string>
    <string name="title_activity_competition">CompetitionActivity</string>
    <string name="name">Name :</string>
    <string name="season">Season : </string>
    <string name="add_to_favorites">Add To Favorites</string>
    <string name="photo">photo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_team">Home Team</string>
    <string name="away_team">Away Team</string>
    <string name="colmn">:</string>
    <string name="show_hide">Show | Hide</string>
    <string name="dash">-</string>
    <string name="matches">Matches</string>
    <string name="teams">Teams</string>
    <string name="club_image">Club Image</string>
    <string name="shirt_colors">Shirt Colors</string>
    <string name="sign_out">Sign Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="register">Register </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="website">WebSite</string>
    <string name="tel">Tel</string>
    <string name="reload_from_network">reload from Network</string>
    <string name="players">Players</string>
    <string name="line_up">Line Up</string>
    <string name="captain">Captain :</string>
    <string name="coach">Coach :</string>
    <string name="referees">Referees :</string>
    <string name="staduim">Stadium :</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="club_colors">Club Colors</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="logo">Logo</string>
</resources>
